--- a/index.html
+++ b/index.html
@@ -182,10 +182,42 @@
                     </label>
                 </fieldset>
                 <div>
-
+                    <label for="cardNumber">Credit Card Number</label>
+                    <input type="text" name="cardNumber" id="cardBox" pattern="^(?:4[0-9]{12}(?:[0-9]{3})?|5[1-5][0-9]{14}|6(?:011|5[0-9][0-9])[0-9]{12}|3[47][0-9]{13}|3(?:0[0-5]|[68][0-9])[0-9]{11}|(?:2131|1800|35\d{3})\d{11})$"
+                        required>
+                </div>
+                <div>
+                    <label for="cardMonth">Expiration Date</label>
+                    <select name="cardMonth" id="monthList" required>
+                        <option value="">--Month--</option>
+                        <option value="1">January</option>
+                        <option value="2">February</option>
+                        <option value="3">March</option>
+                        <option value="4">April</option>
+                        <option value="5">May</option>
+                        <option value="6">June</option>
+                        <option value="7">July</option>
+                        <option value="8">August</option>
+                        <option value="9">September</option>
+                        <option value="10">October</option>
+                        <option value="11">November</option>
+                        <option value="12">December</option>
+                    </select>
+                    <select name="cardYear" id="yearList" required>
+                        <option value="">--Year--</option>
+                        <option value="2017">2017</option>
+                        <option value="2018">2018</option>
+                        <option value="2019">2019</option>
+                        <option value="2020">2020</option>
+                        <option value="2021">2021</option>
+                    </select>
+                </div>
+                <div>
+                    <label for="">CSC</label>
+                    <input type="text" name="csc" id="cscBox" pattern="^\d{3}$" placeholder="nnn" required>
                 </div>
             </fieldset>
-            <!-- <input type="submit" value=""> -->
+            <button type="submit"><img src="sb_button.png" alt="next"></button>
         </form>
 
         <!-- * -->
